<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_shape_radius_top"
    android:paddingHorizontal="@dimen/space_24"
    android:paddingVertical="@dimen/dim_16"
    android:theme="@style/Theme.PASE">

    <ImageView
        android:id="@+id/iv_icon_modal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_report"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_title_modal"
        style="@style/TextAppearance.App.Title.Balance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_icon_modal"
        tools:text="@string/bottom_sheet_disable_activation_biometrics_title" />

    <TextView
        android:id="@+id/tv_body_content_one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/tv_title_modal"
        tools:text="@string/bottom_sheet_disable_activation_biometrics_content_one"/>

    <TextView
        android:id="@+id/tv_body_content_two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/dim_16"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/tv_body_content_one"
        tools:text="@string/bottom_sheet_disable_activation_biometrics_content_two" />



    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dim_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_body_content_two"
        android:backgroundTint="@color/color_error"
        tools:text="@string/bottom_sheet_disable_activation_biometrics_button_yes" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_back_token"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/dim_16"
        app:layout_constraintTop_toBottomOf="@+id/btn_cancel"
        tools:text="@string/bottom_sheet_disable_activation_biometrics_content_back"
        android:textColor="@color/black"
        android:backgroundTint="@color/gray_accent"/>
</androidx.constraintlayout.widget.ConstraintLayout>