<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="@dimen/dim_16"
    android:paddingBottom="@dimen/dim_16">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="@dimen/dim_96"
        android:layout_height="@dimen/dim_99"
        android:layout_marginTop="@dimen/dim_16"
        android:layout_marginBottom="@dimen/dim_16"
        android:contentDescription="@string/fragment_notifications_permisson_dialog_image_view_description"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/notificacion_ilustracion" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dim_18"
        android:text="@string/fragment_notifications_permisson_dialog_title"
        android:textSize="@dimen/text_size_medium"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="@dimen/dim_0"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dim_24"
        android:layout_marginTop="@dimen/dim_16"
        android:layout_marginEnd="@dimen/dim_24"
        android:text="@string/fragment_notifications_permisson_dialog_body"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnPrimary"
        style="@style/OutlinedButtonAlertDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnSecondary"
        app:layout_constraintTop_toBottomOf="@+id/textView20" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSecondary"
        style="@style/OutlinedButtonAlertDialog"
        android:layout_width="wrap_content"
        android:layout_marginEnd="@dimen/dim_24"

        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>