<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white"
    android:fitsSystemWindows="true"
    android:theme="@style/Theme.PASE">

    <include
        android:id="@+id/actionBar"
        layout="@layout/action_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingHorizontal="@dimen/space_24"
        android:paddingBottom="@dimen/dim_16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/actionBar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/icLockBackground"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dim_150"
                android:contentDescription="@string/empty_string"
                android:src="@drawable/ic_lock_background"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/icLock"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/empty_string"
                android:src="@drawable/ic_lock"
                app:layout_constraintBottom_toBottomOf="@+id/icLockBackground"
                app:layout_constraintEnd_toEndOf="@+id/icLockBackground"
                app:layout_constraintStart_toStartOf="@+id/icLockBackground"
                app:layout_constraintTop_toTopOf="@+id/icLockBackground" />

            <TextView
                android:id="@+id/tvInstructions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/dialog_operation_token_description_capture_one"
                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/icLockBackground" />

            <TextView
                android:id="@+id/tvInstructionsTwo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dim_16"
                android:gravity="center"
                android:text="@string/dialog_operation_token_description_capture_two"
                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvInstructions" />

            <TextView
                android:id="@+id/tvTokenCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/dim_24"
                android:background="@drawable/background_code_generator_disable"
                android:gravity="center"
                android:padding="@dimen/dim_16"
                android:text="@string/dialog_operation_token_code"
                android:textAlignment="center"
                android:textColor="@color/primary_color"
                android:textSize="@dimen/text_size_l"
                android:textStyle="bold"
                android:typeface="monospace"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvInstructionsTwo"
                />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_continue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dim_16"
        android:layout_marginHorizontal="@dimen/space_24"
        android:text="@string/dialog_operation_token_continue"
        app:layout_constraintBottom_toTopOf="@+id/btn_finish"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_finish"
        style="@style/Widget.App.Button.Outlined"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/space_24"
        android:layout_marginBottom="@dimen/dim_16"
        android:text="@string/dialog_operation_token_cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>
